# curseforgeapi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: continuous.yml  release.yml
src/: definitions.rs  lib.rs  requests.rs
