[package]
name = "curseforgeapi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
const_format = "0.2.35"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
