[package]
name = "curseforgeapi"
description = "A complete Rust wrapper."
license = "MIT"
version = "1.0.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/Hunam6/curseforgeapi"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
const_format = "0.2.35"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
